grammar.js
    module: ($) => seq(optional($.version_declaration), choice($.main_module, $.library_module)), // 1
    main_module: ($) => seq(optional($.prolog), $.query_body), // 3
    param_list: ($) => seq($._param, repeat(seq(',', $._param))), // 33
    _param: ($) => seq('$', $._EQName, optional(field('param_type', $.type_declaration))), // 34
    query_body: ($) => $._expr, // 38
    _expr: ($) => prec(1, seq($._expr_single, repeat(seq(',', $._expr_single)))), // 39
    _expr_single: ($) =>
      choice(
        $.flwor_expr, // 41          prec: 2
        $.quantified_expr, // 70     prec: 2
        $.switch_expr, // 71         prec: 2
        $.typeswitch_expr, //74      prec: 2
        $.if_expr, // 77             prec: 2
        $.try_catch_expr, // 78      prec: 2
        $.or_expr, // 83             prec: 3
        $.and_expr, // 84            prec: 4
        $.comparison_expr, // 85     prec: 5
        $.string_concat_expr, // 86  prec: 6
        $.range_expr, // 87          prec: 7
        $.additive_expr, // 88       prec: 8
        $.multiplicative_expr, // 89 prec: 9
        $.union_expr, // 90          prec: 10
        $.intersect_except_expr, //91 prec: 11
        $.instance_of_expr, // 92    prec: 12
        $.treat_expr, // 93          prec: 13
        $.castable_expr, // 94       prec: 14
        $.cast_expr, // 95           prec: 15
        $.arrow_expr, // 96          prec: 16
        $.unary_expr, //  97         prec: 17 '-' '+' arithmetic prefix right to left */
        $.bang_expr, //107           prec: 18
        seq($._postfix_expr, optional($.absolute_path_expr)),
        $.absolute_path_expr,
        $.rel_path_expr,
        $._primary_expr
        //$.qname
      ),
    flwor_expr: ($) => prec(2, seq($._initial_clause, repeat($._intermediate_clause), $.return_clause)), // 41
    _initial_clause: ($) => choice($.for_clause, $.let_clause, $._window_clause), // 42
    _intermediate_clause: ($) => choice($._initial_clause, $.where_clause, $.group_by_clause, $.order_by_clause, $.count_clause), // 43',
    let_clause: ($) => seq('let', $.let_binding, repeat(seq(',', $.let_binding))), // 48
    let_binding: ($) => seq('$', $._EQName, optional($.type_declaration), ':=', $._expr_single), // 49
    return_clause: ($) => seq('return', $._expr_single), // 69
    // end flwor
    comparison_expr: ($) => prec.left(5, seq(field('lhs', $._expr_single), $._comparison_ops, field('rhs', $._expr_single))), // 85
    _comparison_ops: ($) => choice($._value_comp, $._general_comp, $._node_comp),
    instance_of_expr: ($) => prec.left(12, seq(field('lhs', $._expr_single), 'instance', 'of', field('rhs', $.sequence_type))), // 92
    predicate: ($) => prec.left(20, seq('[', $._expr_single, ']')), // 124
    absolute_path_expr: ($) => prec.left(19, choice(seq(choice('//', '/'), $.rel_path_expr), '/')),
    rel_path_expr: ($) => prec.left(19, seq($._step_expr, repeat(seq(choice('/', '//'), $._step_expr)))),
    _step_expr: ($) => prec.left(19, seq(choice($._postfix_expr, $._axis_step))),
    abbrev_reverse_step: ($) => '..',
    forward_axis: ($) => seq(choice('child', 'descendant', 'attribute', 'self', 'descendant-or-self', 'following-sibling', 'following'), '::', $._node_test), //113
    abbrev_forward_step: ($) => prec.right(seq(optional('@'), $._node_test)),
    _node_test: ($) => choice($.name_test, $._kind_test), // 118
    name_test: ($) => choice($._EQName, $.wildcard), //  199
    wildcard: ($) => choice('*', seq($._ncname, ':*'), seq('*:', $._ncname), seq($.braced_uri_literal, '*')), // 120
    _literal: ($) => choice($._numeric_literal, $.string_literal),
    var_ref: ($) => seq('$', $._var_name), // 131
    parenthesized_expr: ($) => seq('(', optional($._expr), ')'), // 133
    context_item_expr: ($) => '.',
    function_call: ($) => seq($._EQName, $.arg_list), // grammar-note: parens  lookahead comment pragma
    arg_list: ($) => seq('(', optional(seq($._argument, repeat(seq(',', $._argument)))), ')'), // 122
    _argument: ($) => field('arg', choice($._expr_single, $.placeholder)),
    function_item_expr: ($) => choice($.named_function_ref, $.inline_function_expr), //167
    named_function_ref: ($) => seq($._EQName, token.immediate('#'), field('signature', $.integer_literal)), // 168
    inline_function_expr: ($) =>
      seq(optional($.annotation), 'function', '(', optional($.param_list), ')', optional(field('return_type', $.type_declaration)), field('body', $.enclosed_expr)), // 169
    // 2.5.4 SequenceType Syntax
    type_declaration: ($) => seq('as', $.sequence_type), // 183
    sequence_type: ($) => choice(seq('empty-sequence', '(', ')'), prec.right(seq($._item_type, optional($.occurrence_indicator)))), // 184
    _item_type: ($) =>
      choice(
        $._kind_test,
        $.any_item,
        $._func_test, // maps arrays are functions
        $.atomic_or_union_type,
        $.parenthesized_item_type // 216
      ), // 186
    occurrence_indicator: ($) => choice('?', '*', '+'), // 185
    atomic_or_union_type: ($) => $._EQName, // 187
    any_item: ($) => seq('item', '(', ')'),
    any_kind_test: ($) => seq('node', token.immediate('('), ')'), // 189
    text_test: ($) => seq('text', token.immediate('('), ')'), // 191
    comment_test: ($) => seq('comment', '(', ')'), // 192
    namespace_node_test: ($) => seq('namespace-node', '(', ')'), // 193
    element_test: ($) => seq('element', seq('(', optional($.element_test_params), ')')), // 199
    element_test_params: ($) =>
      seq(field('name', choice(alias('*', $.wildcard), $._EQName)), optional(seq(',', field('type', seq($._EQName, optional(alias('?', $.occurrence_indicator))))))),
    // same as element but no nilled test as attributes don't have children
    attribute_test: ($) => seq('attribute', '(', optional(seq($._attrib_name_or_wildcard, optional(seq(',', field('type_name', $._EQName))))), ')'), // 195
    _attrib_name_or_wildcard: ($) => choice(field('attribute_name', $._EQName), alias('*', $.wildcard)), //196
    schema_element_test: ($) => seq('schema-element', '(', field('element_name', $._EQName), ')'), //197
    schema_attribute_test: ($) => seq('schema-attribute', '(', field('attribute_name', $._EQName), ')'), //201
    any_function_test: ($) => seq(repeat($.annotation), 'function', seq('(', alias('*', $.wildcard), ')')), //  // 207
    typed_function_test: ($) => seq(repeat($.annotation), 'function', '(', $.sequence_type, repeat(seq(',', $.sequence_type)), ')', $.type_declaration),
    any_map_test: ($) => seq('map', '(', alias('*', $.wildcard), ')'), // 210
    typed_map_test: ($) => seq('map', '(', $.atomic_or_union_type, ',', $.sequence_type, ')'), // 212
    any_array_test: ($) => seq('array', '(', alias('*', $.wildcard), ')'),
    typed_array_test: ($) => seq('array', '(', $.sequence_type, ')'),
    annotation: ($) => seq('%', $._EQName, optional(seq('(', $._literal, repeat(seq(',', $._literal)), ')'))), // 27
    enclosed_expr: ($) => seq('{', optional($._expr), '}'), // 5
    map_constructor: ($) => prec.left(2, seq('map', seq('{', optional($.map_entry), repeat(seq(',', $.map_entry)), '}'))), //170
    curly_array_constructor: ($) => seq('array', field('content', $.enclosed_expr)),
    square_array_constructor: ($) => seq('[', optional($._expr_single), repeat(seq(',', $._expr_single)), ']'),
    string_literal: ($) => choice($._string_quote, $._string_apos),
    _string_quote: ($) => seq('"', repeat($._string_quote_content), '"'),
    _string_apos: ($) => seq("'", repeat($._string_apos_content), "'"),
    predefined_entity_ref: ($) => /&(lt|gt|amp|quot|apos);/,
    escape_quote: ($) => '""',
    escape_apos: ($) => "''",
    char_ref: ($) => /&#[0-9]+;|&#x[0-9a-fA-F]+;/,
    double_literal: ($) => /(\.\d+)|(\d+\.\d*|\d+)[eE][+-]{0,1}\d+/,
    integer_literal: ($) => /\d+/,
    _var_name: ($) => $._EQName,
    _EQName: ($) => choice($._allowed_qnames, $.uri_qualified_name),
    //_QName: ($) => choice(field('unprefixed', $.identifier), seq(field('prefix', $.identifier), token.immediate(':'), field('local', $.identifier))),
    //_allowed_qnames: $  => prec.right(seq( $._ncname, optional(seq(':', $._ncname)))),
    _ncname: ($) => choice($.identifier, alias($._non_delimiting_word, $.identifier)),
    uri_qualified_name: ($) => seq(field('braced_uri_literal', alias($.braced_uri_literal, $.identifier)), $._ncname), //ws explicitly
    char_data: ($) => /[^\p{C}]/,
    // ^\p{C}  no invisible control characters and unused code points

    identifier: ($) => /[_\p{XID_Start}][-_\p{XID_Continue}]*/,
