test/corpus/primary.txt
==================
3.1.1 Literal: numeric integer
==================

12

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (integer_literal)))))

==================
3.1.1 Literal: numeric decimal
==================

.5

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (double_literal)))))

==================
3.1.1 Literal: numeric double
==================

51.25E2

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (double_literal)))))

==================
3.1.1 Literal: string double quotes
==================

 "hello world"

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_literal
          (char_data))))))

==================
3.1.1 Literal: string single quotes
==================

 'hello world'

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_literal
          (char_data))))))

==================
 3.1.1 Literal: string with escaped quotes
==================

"He said, ""I don't like it."""
---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_literal
          (char_data)
          (escape_quote)
          (char_data)
          (escape_quote))))))

==================
3.1.1 Literal: string with escape apos
==================

'He said, ''I don''t like it.'''

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_literal
          (char_data)
          (escape_apos)
          (char_data)
          (escape_apos)
          (char_data)
          (escape_apos))))))

=================
3.1.1 Literal: string with predefined entity ref
=================

"Ben &amp; Jerry&apos;s"

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_literal
          (char_data)
          (predefined_entity_ref)
          (char_data)
          (predefined_entity_ref)
          (char_data))))))

==================
3.1.1 Literal: string with character reference
==================

"&#8364;99.50"

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (string_literal
          (char_ref)
          (char_data))))))

==================
3.1.2 Variable References: unprefixed
==================

$x

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (var_ref
          (identifier))))))

==================
3.1.2 Variable References: namespace prefix and local part
==================

$example:fruit

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (var_ref
          (identifier)
          (identifier))))))

==================
3.1.2 Variable References: URIQualifiedName
==================

$Q{http://example.com/ns}invoice

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (var_ref
          (uri_qualified_name
            (identifier)
            (identifier)))))))

==================
3.1.3 Parenthesized with constructed empty sequence
==================

()

-------------------

(module
  (main_module
    (query_body
      (rel_path_expr
        (parenthesized_expr)))))

==================
3.1.3 Parenthesized with constructed sequence one item
==================

( 1 )

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (parenthesized_expr
          (rel_path_expr
            (integer_literal)))))))

==================
3.1.3 Parenthesized with constructed sequence comma separated items
==================

( 1, 2 )

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (parenthesized_expr
          (rel_path_expr
            (integer_literal))
          (rel_path_expr
            (integer_literal)))))))

==================
3.1.3 Parenthesized with embeded sequences 5 items
==================

(10, (1, 2), (), (3, 4))

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (parenthesized_expr
          (rel_path_expr
            (integer_literal))
          (rel_path_expr
            (parenthesized_expr
              (rel_path_expr
                (integer_literal))
              (rel_path_expr
                (integer_literal))))
          (rel_path_expr
            (parenthesized_expr))
          (rel_path_expr
            (parenthesized_expr
              (rel_path_expr
                (integer_literal))
              (rel_path_expr
                (integer_literal)))))))))

==================
3.1.4 Context Item Expression
==================

. 

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (context_item_expr)))))

==================
3.1.5 Static Function Call with identifier without arg
==================

array:size()

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (function_call
          (identifier
            (identifier))
          (identifier)
          (arg_list))))))

==================
3.1.5 Static Function Call with identifier with hyphen
==================

hyphen-function( $foo )
---

(module
  (main_module
    (query_body
      (rel_path_expr
        (function_call
          (identifier)
          (arg_list
            (rel_path_expr
              (var_ref
                (identifier)))))))))

==================
3.1.6 Named Function References:
==================

fn:abs#1

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (function_item_expr
          (named_function_ref
            (identifier)
            (identifier)
            (integer_literal)))))))

==================
3.1.7 Inline Function Expressions: simple
==================

function()  { 'hello world' }

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (function_item_expr
          (inline_function_expr
            (enclosed_expr
              (rel_path_expr
                (string_literal
                  (char_data))))))))))

==================
3.1.7 Inline Function: with args
==================

function ( $param1, $param2 )  {()}

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (function_item_expr
          (inline_function_expr
            (param_list
              (identifier)
              (identifier))
            (enclosed_expr
              (rel_path_expr
                (parenthesized_expr)))))))))

==================
3.1.7 Inline Function: with arg type declaration
==================

function( $a as empty-sequence() )  { () }

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (function_item_expr
          (inline_function_expr
            (param_list
              (identifier)
              (type_declaration
                (sequence_type)))
            (enclosed_expr
              (rel_path_expr
                (parenthesized_expr)))))))))

==================
3.1.7 Inline Function:  with return type declaration
==================

function( $a as item() ) as item()  { () }

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (function_item_expr
          (inline_function_expr
            (param_list
              (identifier)
              (type_declaration
                (sequence_type
                  (any_item))))
            (type_declaration
              (sequence_type
                (any_item)))
            (enclosed_expr
              (rel_path_expr
                (parenthesized_expr)))))))))

==================
3.1.7 Inline Function: sequence type occurrance indicator
==================

function( $a as item()* ) as item()+  { () }

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (function_item_expr
          (inline_function_expr
            (param_list
              (identifier)
              (type_declaration
                (sequence_type
                  (any_item)
                  (occurrence_indicator))))
            (type_declaration
              (sequence_type
                (any_item)
                (occurrence_indicator)))
            (enclosed_expr
              (rel_path_expr
                (parenthesized_expr)))))))))

; The two cases below are intentionally left failing: they assert that
; reserved function names are rejected as identifiers, which needs the
; scoped reserved-word set tracked by issue #4 (currently unimplemented -
; the grammar accepts these today). Do not "fix" by accepting the current
; error-free output; that would erase #4's test coverage. Regenerate their
; expected trees once #4 lands, including the query_body/rel_path_expr
; wrapping used everywhere else in this file.
==================
3.1.7 Inline Function: illegal var - uses reserved function name
==================

let $getContent := function( $map as map(*) ) as map(*){()}
return ()

---

(module
  (main_module
    (flwor_expr
      (let_clause
        (let_binding
          (var_ref
            (identifier))
          (inline_function_expr
            (param_list
              (ERROR
                (identifier)))
            (type_declaration
              (sequence_type
                (any_map_test
                  (wildcard))))
            (enclosed_expr
              (parenthesized_expr)))))
      (return_clause
        (parenthesized_expr)))))

==================
3.1.7 Inline Function: illegal function name - uses reserved function name
==================

let $map := function(){}
return ()

---

(module
  (ERROR
    (path_expr
      (inline_function_expr
        (param_list)
        (enclosed_expr))))
  (main_module
    (parenthesized_expr)))
