test/corpus/xPath.txt
==================
3.3.0 Path Expr - leading lone slash
==================

/

---

(module
  (main_module
    (query_body
      (absolute_path_expr))))

==================
3.3.0 Path Expr - lone slash or double with rel path,
==================

 //child::div1

---

(module
  (main_module
    (query_body
      (absolute_path_expr
        (rel_path_expr
          (forward_axis
            (name_test
              (identifier))))))))

==================
3.3.0 Path Expr just a relative path
==================

child::div1

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (forward_axis
          (name_test
            (identifier)))))))

==================
3.3.1 Path operator (/) wildcard
==================

$node/*

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (var_ref
          (identifier
            (identifier)))
        (abbrev_forward_step
          (name_test
            (wildcard)))))))

==================
3.3.1 Path operator (/) kind test
==================

$node/text()

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (var_ref
          (identifier
            (identifier)))
        (abbrev_forward_step
          (text_test))))))

==================
3.3.1 Path Relative Path
==================

child::div1/child::para

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (forward_axis
          (name_test
            (identifier)))
        (forward_axis
          (name_test
            (identifier)))))))

==================
3.3.2 Path Node Tests with wildcard
==================

child::element(*, po:address)

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (forward_axis
          (element_test
            (element_test_params
              (wildcard)
              (identifier)
              (identifier))))))))

==================
3.3.3 Path Predicates within Steps
==================

 child::chapter[2]

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (forward_axis
          (name_test
            (identifier)))
        (predicate
          (rel_path_expr
            (integer_literal)))))))

==================
3.3.4 Path Unabbreviated Syntax
==================

child::para

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (forward_axis
          (name_test
            (identifier)))))))

==================
3.3.4 Path Unabbreviated Syntax with steps and predicate
==================

child::para[fn:position() = 1]

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (forward_axis
          (name_test
            (identifier)))
        (predicate
          (comparison_expr
            (rel_path_expr
              (function_call
                (identifier)
                (identifier)
                (arg_list)))
            (rel_path_expr
              (integer_literal))))))))

==================
3.3.5 Path Abbreviated Syntax with EQName (identifier)
==================

section/para

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (abbrev_forward_step
          (name_test
            (identifier)))
        (abbrev_forward_step
          (name_test
            (identifier)))))))

==================
3.3.5 Path: Abbreviated Syntax with attribute
==================

section/@id

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (abbrev_forward_step
          (name_test
            (identifier)))
        (abbrev_forward_step
          (name_test
            (identifier)))))))

==================
3.3.5 Path: Abbreviated Syntax with attribute wildcard
==================

@*

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (abbrev_forward_step
          (name_test
            (wildcard)))))))

==================
3.3.5 Path: Abbreviated Syntax with reverse up
==================

..

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (abbrev_reverse_step)))))
